# SerialPort

./: .gitignore  CMakeLists.txt  LICENSE  README.md
SerialPort/: Linux_Serial.cpp  Serial.cpp  Serial.hpp  Source.cpp  test.cpp
example/: CMakeLists.txt  test.cpp
src/: Serial.cpp
